--- a/index.jade
+++ b/index.jade
@@ -6,9 +6,11 @@ html(ng-app='comprehensions')
   body(ng-controller='mainCtrl as vm')
     form(name='comprehension' ng-submit='vm.submit()')
       label Pattern
-      input(type='text' name='pattern' ng-model='vm.comprehension.pattern' required)
+      input(type='text' name='pattern' ng-model='vm.pattern' required)
       label Predicates
-      input(type='text' name='predicates' ng-model='vm.comprehension.predicates')
+      input(type='text' name='predicates' ng-model='vm.predicates')
       input(type="submit" id="submit" value="Submit")
+
+    h1 {{ vm.comprehension }}
 
     div {{ vm.comprehension.pattern }}
