--- a/index.jade
+++ b/index.jade
@@ -11,6 +11,6 @@ html(ng-app='comprehensions')
       input(type='text' name='predicates' ng-model='vm.predicates')
       input(type="submit" id="submit" value="Submit")
 
-    h1 {{ vm.comprehension }}
+    h1 [] : {{ vm.comprehension }}
 
-    div {{ vm.comprehension.pattern }}
+    div#slider
