--- a/index.jade
+++ b/index.jade
@@ -12,8 +12,12 @@ html(lang='en')
     #controls
       h1 List Control:
       
+      h4 Use Notes
+      p Currently, the script is dirty evaling input fields. It will transform python operators "and/or/not" to the appropriate JS, but still evaluates in only one if statement. Variables must be expressed in terms of x.
+      
+      
       h4 Array Comprehension:
-      <p>&nbsp&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp  <i> lambda argument&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp min&nbspmax&nbsp&nbsp  &nbsp predicates</i></p>
+      <p>&nbsp&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp  <i> lambda argument&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp min&nbsp max&nbsp&nbsp  &nbsp&nbsp&nbsp     predicate</i></p>
       form#comprehension-form
         label my_list = [
         input#lambda(type='text' name='lambda' required)
@@ -21,7 +25,7 @@ html(lang='en')
         input#min(type='text' name='min' required)
         label , 
         input#max(type='text' name='max' required)
-        label )
+        label ) if
         input#predicates(type='text' name='predicates')
         label ]
         input(type="submit" id="submit")
