--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ html(lang='en')
     script(src='http://code.jquery.com/jquery-1.10.2.js')
     script(src='http://code.jquery.com/ui/1.11.4/jquery-ui.js')
     link(rel='stylesheet', href='./styles/styles.css')
-    script(src='./scripts/main.js')
+    script(src='./scripts/bundle.js')
   body
     #controls
       h1 List Control:
